fixed PREM density for the core

--- a/grav_ex.ipynb
+++ b/grav_ex.ipynb
@@ -73,6 +73,10 @@
     "    x=radius/6371.0e3\n",
     "    if radius>6371.0e3:\n",
     "        densprem=0\n",
+    "    elif radius<=1221.5:\n",
+    "        densprem=13.0885-8.8381*x**2\n",
+    "    elif radius<=3480.0:\n",
+    "        densprem=12.5815-1.2638*x-3.6426*x**2-5.5281*x**3\n",
     "    elif radius<=3630.0e3:\n",
     "        densprem=7.9565-6.4761*x+5.5283*x**2-3.0807*x**3\n",
     "    elif radius<=5600.0e3:\n",
