updated comments in r rheta phi calculation lines

--- a/grav_ex.ipynb
+++ b/grav_ex.ipynb
@@ -247,9 +247,9 @@
     "    for i in range(0,N):\n",
     "        for j in range(0,N):\n",
     "            for k in range(0,N):\n",
-    "                #implement code to compute x-coordinate >>> r[counter]=\n",
-    "                #implement code to compute y-coordinate >>> theta[counter]=\n",
-    "                #implement code to compute z-coordinate >>> phi[counter]=           \n",
+    "                #implement code to compute r >>> r[counter]=\n",
+    "                #implement code to compute theta >>> theta[counter]=\n",
+    "                #implement code to compute phi >>> phi[counter]=           \n",
     "                counter+=1\n",
     "    x,y,z=Spherical2Cartesian([r,theta,phi])   #convert r,theta,phi to x,y,z\n",
     "\n",
@@ -417,7 +417,7 @@
     "    #and remove the \"pass\" the following pass line\n",
     "    pass\n",
     "#end for\n",
-    "I*=8.*np.pi/3.\n",
+    "#I*=8.*np.pi/3.\n",
     "\n",
     "print('I=',I)"
    ]
